author: Julian Blake Kongslie
build-type: Simple
cabal-version: >=1.8
license-file: LICENSE
license: MIT
maintainer: jblake@omgwallhack.org
name: solderapi
version: 0.1

executable mksolder
  build-depends:
    base,
    bytestring,
    containers,
    Crypto,
    dataenc,
    directory,
    filepath,
    json,
    monads-tf,
    split,
    unix
  hs-source-dirs: src
  main-is: MkSolder.hs
  other-modules:
    API
    Spec

source-repository head
  type: git
  location: git://github.com/jblake/solderapi.git
  branch: master
